welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: not found: type Booleaan
def move(nbPas: Int, versLAvant: Booleaan) {
                                 ^